--- a/index.html
+++ b/index.html
@@ -6,15 +6,16 @@
 	<body>
 		<h1>Welcome to Campus Directions</h1>
 
-		<ui-view></ui-view>
+		<ng-view></ng-view>
 	</body>
 
+	
 	<script src="/node_modules/angular/angular.min.js"></script>
 	<script src="/node_modules/angular-route/angular-route.min.js"></script>
 	<script src="/node_modules/angular-chat/angular-chat.js"></script>
 	<script src="/node_modules/rltm/web/rltm.js"></script>
 	
-	<script src="/js/app.js"></script>
 	<script src="/config/config.js"></script>
+	<script src="/js/app.js"></script>
 	<script src="/js/controllers/HomeController.js"></script>
 </html>
