Put in basic parts of home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Welcome to Campus Directions</h1>
+		<center>
+			<h1>Campus Directions</h1>
+		</center>
+		<hr style="width: 50%">
 
 		<ng-view></ng-view>
 	</body>
