Set up messages view and controller. Got rid of #! in url

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>Campus Directions</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<base href="/">
 	</head>
 	<body>
 		<center>
