--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 	<head>
 		<title>Campus Directions</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 		<base href="/">
 	</head>
 	<body>
-		<center>
+		<div class="container">
+			<a ng-href="/" style="margin: 1em 4.5em 0 0">
+				<button class="unselectedButton">
+					Start Over
+				</button>
+			</a>
 			<h1>Campus Directions</h1>
-		</center>
+			<a ng-href="/settings" style="margin: 1em 0 0 4.5em">
+				<button class="unselectedButton">
+					<i class="icon-cog"></i>
+					Settings
+				</button>
+			</a>
+		</div>
 		<hr style="width: 50%">
 
 		<ng-view></ng-view>
@@ -22,4 +34,7 @@
 	<script src="/config/config.js"></script>
 	<script src="/js/app.js"></script>
 	<script src="/js/controllers/HomeController.js"></script>
+	<script src="/js/controllers/MessagesController.js"></script>
+	<script src="/js/controllers/SettingsController.js"></script>
+
 </html>
