--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>Campus Directions</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+		<link href="node_modules/angular-ui-notification/dist/angular-ui-notification.min.css" rel="stylesheet">
 		<base href="/">
 	</head>
 	<body>
@@ -25,16 +26,16 @@
 		<ng-view></ng-view>
 	</body>
 
-	
 	<script src="/node_modules/angular/angular.min.js"></script>
 	<script src="/node_modules/angular-route/angular-route.min.js"></script>
+	<script src="/node_modules/angular-ui-notification/dist/angular-ui-notification.js"></script>
 	<script src="/node_modules/angular-chat/angular-chat.js"></script>
 	<script src="/node_modules/rltm/web/rltm.js"></script>
 	
 	<script src="/config/config.js"></script>
 	<script src="/js/app.js"></script>
+	<script src="/js/factory/TransferData.js"></script>
 	<script src="/js/controllers/HomeController.js"></script>
 	<script src="/js/controllers/MessagesController.js"></script>
 	<script src="/js/controllers/SettingsController.js"></script>
-
 </html>
