Users can submit steps to translate

--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 	</head>
 	<body>
 		<div class="container">
-			<a ng-href="/" style="margin: 1em 4.5em 0 0">
+			<!-- <a ng-href="/" style="margin: 1em 4.5em 0 0">
 				<button class="unselectedButton">
 					Start Over
 				</button>
-			</a>
+			</a> -->
 			<h1>Campus Directions</h1>
-			<a ng-href="/settings" style="margin: 1em 0 0 4.5em">
+			<!-- <a ng-href="/settings" style="margin: 1em 0 0 4.5em">
 				<button class="unselectedButton">
 					<i class="icon-cog"></i>
 					Settings
 				</button>
-			</a>
+			</a> -->
 		</div>
 		<hr style="width: 50%">
 
