--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 	<script src="/node_modules/angular/angular.min.js"></script>
 	<script src="/node_modules/angular-route/angular-route.min.js"></script>
 	<script src="/node_modules/angular-ui-notification/dist/angular-ui-notification.js"></script>
-	
+	<script src="/node_modules/angular-chat/angular-chat.js"></script>
+-	<script src="/node_modules/rltm/web/rltm.js"></script>
+
 	<script src="/js/app.js"></script>
 	<script src="/config/config.js"></script>
 	<script src="/js/factory/TransferData.js"></script>
